# Valeronoi

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Containerfile.build  Containerfile.run  README.md  cmake-format.py
.github/workflows/: ci.yml  pre-commit.yml
assets/: appinfo.rc  valeronoi.desktop
assets/icon/: gen_icns.sh  gen_icon.sh  valeronoi.icns
src/: config.h.in  main.cpp  valeronoi.cpp  valeronoi.h  valeronoi.qrc  valeronoi.ui
src/cli/: headless_recorder.cpp  headless_recorder.h
src/gui/dialog/: about.cpp  about.h  about.ui  export.cpp  export.h  export.ui  log.cpp  log.h  log.ui  mdns_discovery_dialog.cpp  mdns_discovery_dialog.h  robot_config.cpp  robot_config.h  robot_config.ui  settings.cpp  settings.h  settings.ui  update.cpp  update.h  update.ui
src/gui/graphics_item/: entity_item.cpp  entity_item.h  floor_item.cpp  floor_item.h  map_based_item.cpp  map_based_item.h  map_item.cpp  map_item.h  measurement_item.cpp  measurement_item.h
src/gui/widget/: display_widget.cpp  display_widget.h
src/res/: colormaps.json
src/robot/: commands.h  connection_configuration.cpp  connection_configuration.h  mdns_discovery.cpp  mdns_discovery.h  robot.cpp  robot.h  robot_information.cpp  robot_information.h  wifi_information.cpp  wifi_information.h
src/robot/api/: sse.cpp  sse.h  valetudo_v2.cpp  valetudo_v2.h
src/state/: measurements.cpp  measurements.h  robot_map.cpp  robot_map.h  state.cpp  state.h  wifi_collection.cpp  wifi_collection.h
src/util/: colormap.h  compat.h  log_helper.cpp  log_helper.h  segment_generator.cpp  segment_generator.h
tests/: test_colormap.cpp  test_main.cpp  test_measurements.cpp  test_robot_map.cpp  test_segment_generator.cpp  test_wifi_collection.cpp  test_wifi_information.cpp
tools/appimage/.docker/: in_docker.sh
tools/appimage/current/: 01-build_docker_image.sh  02-build_appimage.sh  Dockerfile
tools/appimage/legacy/: 01-build_docker_image.sh  02-build_appimage.sh  Dockerfile
tools/macos/: README.md  build.sh
tools/pkgbuild/valeronoi-git/: PKGBUILD
tools/windows/: 01-build_docker_image.sh  02-build_installer.sh  Dockerfile  copy_dlls.py  install.nsi
tools/windows/.docker/: copy_dlls.py  in_docker.sh
